--- a/index.html
+++ b/index.html
@@ -4,78 +4,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eryckson Rocha | Portfólio Designer</title>
-  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-  <header class="header-container fade-in">
-    <div class="limite-largura">
-      <div class="header-content">
-        <div class="perfil-container">
-          <img src="eri.png" alt="Eryckson Rocha" class="foto-perfil">
+  <div id="conteudo-site">
+    <header class="header-container fade-in">
+      <div class="limite-largura">
+        <div class="header-content">
+          <div class="perfil-container">
+            <img src="eri.png" alt="Eryckson Rocha" class="foto-perfil">
+          </div>
+          <div class="header-text">
+            <h1>Eryckson Rocha</h1>
+            <p class="subtitulo">Designer Gráfico & Identidade Visual</p>
+          </div>
         </div>
-        <div class="header-text">
-          <h1>Eryckson Rocha</h1>
-          <p class="subtitulo">Designer Gráfico & Identidade Visual</p>
-        </div>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#trabalhos">Trabalhos</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
+        </nav>
       </div>
+    </header>
 
-      <nav class="menu-nav">
-        <ul>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#trabalhos">Trabalhos</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <main class="conteudo-principal limite-largura fade-in">
+      <section id="sobre">
+        <h2>Sobre mim</h2>
+        <p>Sou designer gráfico apaixonado por transformar ideias em realidade através de identidade visual e design digital. Especialista em criar marcas que conectam e comunicam com propósito.</p>
+      </section>
 
-  <main class="conteudo-principal limite-largura fade-in">
-    <section id="sobre">
-      <h2>Sobre mim</h2>
-      <p>Sou designer gráfico apaixonado por transformar ideias em realidade através de identidade visual e design digital. Especialista em criar marcas que conectam e comunicam com propósito.</p>
-    </section>
-
-    <section id="trabalhos">
-      <h2>Meus trabalhos</h2>
-      <div class="galeria">
-        <div class="projeto-card">
-          <img src="foods.png" alt="Projeto 1">
-          <div class="projeto-overlay"><span>Ver Detalhes</span></div>
+      <section id="trabalhos">
+        <h2>Meus trabalhos</h2>
+        <div class="galeria">
+          <div class="projeto-card" onclick="abrirModal('projeto1.jpg')">
+            <img src="foods.png" alt="Projeto 1">
+            <div class="projeto-overlay"><span><i class="fa-solid fa-magnifying-glass-plus"></i> Ver Detalhes</span></div>
+          </div>
+          <div class="projeto-card" onclick="abrirModal('projeto2.jpg')">
+            <img src="lemo.png" alt="Projeto 2">
+            <div class="projeto-overlay"><span><i class="fa-solid fa-magnifying-glass-plus"></i> Ver Detalhes</span></div>
+          </div>
+          <div class="projeto-card" onclick="abrirModal('projeto3.jpg')">
+            <img src="projeto3.jpg" alt="Projeto 3">
+            <div class="projeto-overlay"><span><i class="fa-solid fa-magnifying-glass-plus"></i> Ver Detalhes</span></div>
+          </div>
         </div>
-        <div class="projeto-card">
-          <img src="lemo.png" alt="Projeto 2">
-          <div class="projeto-overlay"><span>Ver Detalhes</span></div>
-        </div>
-        <div class="projeto-card">
-          <img src="projeto3.jpg" alt="Projeto 3">
-          <div class="projeto-overlay"><span>Ver Detalhes</span></div>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="contato">
-      <h2>Contato</h2>
-      <p>Vamos criar algo incrível juntos? Entre em contato por um dos canais abaixo:</p>
-      
-      <div class="botoes-contato">
-        <a href="https://wa.me/5584994301573" target="_blank" class="btn-contato">
-          <i class="fa-brands fa-whatsapp"></i> WhatsApp
-        </a>
-        <a href="mailto:eryckson.rocha1@gmail.com" class="btn-contato">
-          <i class="fa-regular fa-envelope"></i> E-mail
-        </a>
-      </div>
-    </section>
-  </main>
+      <section id="contato">
+        <h2>Contato</h2>
+        <p>Vamos criar algo incrível juntos?</p>
+        <div class="botoes-contato">
+          <a href="https://wa.me/5584994301573" target="_blank" class="btn-contato">
+            <i class="fa-brands fa-whatsapp"></i> WhatsApp
+          </a>
+          <a href="mailto:eryckson.rocha1@gmail.com" class="btn-contato">
+            <i class="fa-regular fa-envelope"></i> E-mail
+          </a>
+        </div>
+      </section>
+    </main>
 
-  <footer>
-    <p>© 2026 - Eryckson Design | Natal, RN</p>
-  </footer>
+    <footer>
+      <p>© 2026 - Eryckson Design | Natal, RN</p>
+    </footer>
+  </div>
+
+  <div id="modalLightbox" class="modal" onclick="fecharModal()">
+    <span class="fechar">&times;</span>
+    <img class="modal-conteudo" id="imgModal">
+  </div>
+
+  <script>
+    function abrirModal(src) {
+      document.getElementById("modalLightbox").style.display = "flex";
+      document.getElementById("imgModal").src = src;
+      // Aplica o desfoque no conteúdo do site
+      document.getElementById("conteudo-site").classList.add("desfocado");
+    }
+    function fecharModal() {
+      document.getElementById("modalLightbox").style.display = "none";
+      // Remove o desfoque
+      document.getElementById("conteudo-site").classList.remove("desfocado");
+    }
+  </script>
 
 </body>
 </html>
